# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  conftest.py  pyproject.toml
.github/workflows/: deploy.yml
apps/accounts/: admin.py  admin_urls.py  admin_views.py  apps.py  emails.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/blog/: admin_serializers.py  admin_urls.py  admin_views.py  ai.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/cart/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/catalog/: admin.py  admin_serializers.py  admin_urls.py  admin_views.py  apps.py  images.py  models.py  reviews.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/common/: admin.py  admin_urls.py  admin_views.py  analytics_views.py  apps.py  audit.py  audit_mixins.py  exceptions.py  models.py  pagination.py  views.py
apps/currency/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  pricing.py  providers.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/fulfillment/: admin.py  apps.py  models.py  services.py  tasks.py
apps/inventory/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  selectors.py  services.py  tasks.py
apps/notifications/: admin.py  apps.py  events.py  models.py  notify.py  services.py  tasks.py
apps/orders/: admin.py  admin_urls.py  admin_views.py  apps.py  inquiries.py  models.py  serializers.py  services.py  state_machine.py  urls.py  views.py
apps/payments/: admin.py  admin_urls.py  admin_views.py  apps.py  config.py  models.py  providers.py  services.py  urls.py  views.py
apps/promotions/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  services.py
apps/storeconfig/: admin.py  (+9 more)
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
deploy/: README.md  celery-beat.service  celery-worker.service  deploy.sh  gunicorn.service  nginx.conf  sudoers.d-mmeso  sudoers.d-prime
(+112 files in other folders)
