[project]
name = "idealcommerce-backend"
version = "0.1.0"
description = "IdealCommerce — modular e-commerce + dropshipping platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "django-filter>=24.2",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "celery>=5.3",
    "django-celery-beat>=2.6",
    "cloudinary>=1.40",
    "django-cloudinary-storage>=0.3",
    "django-cors-headers>=4.3",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "dotenv>=0.9.9",
]

# Development tooling lives in a uv dependency group, installed by default with
# `uv sync`. Use `uv sync --no-dev` for a production-only install.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory_boy>=3.3",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
    "types-requests>=2.31",
]

[tool.uv]
# This is a Django application, not a distributable package — don't try to build
# it as a wheel during `uv sync`.
package = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4"]
ignore = ["E501"]  # black owns line length

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E", "F", "I", "UP", "B", "DJ"]
"*/tests/*" = ["DJ"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_return_any = false
disallow_untyped_decorators = false
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"
